macros/tests/sig4-fail.stderr
error: cannot be a method
 --> tests/sig4-fail.rs:7:15
  |
7 |     fn e_main(&self, table: ()) {}
  |               ^^^^^
